# physical-activity-patterns

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
srccode/: label_pa.py  read_binfile.py  setup_logging.py  summarize_geneactive_binfile.py
srccode/utils/: constants.py  data_retrieval.py  fileutils.py  notebook_support.py  printers.py
