# <https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html#metadata>
[metadata]
name = physical-activity-patterns
author = melvio
long_description = file: README.md
# https://datatracker.ietf.org/doc/html/rfc7763
long_description_content_type = text/markdown

# <https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html#options>
[options]
package_dir =
    =srccode
